Added jquery in SpecRunner.html to reduce errors
- spec/SpecRunner.html - Added jquery to reduce console.log errors
  and the spec runner returns green (WIP)

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -6,6 +6,7 @@
 
   <link rel="shortcut icon" type="image/png" href="support/jasmine-1.2.0/jasmine_favicon.png">
   <link rel="stylesheet" type="text/css" href="support/jasmine-1.2.0/jasmine.css">
+  <script src="../jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="support/jasmine-1.2.0/jasmine.js"></script>
   <script type="text/javascript" src="support/jasmine-1.2.0/jasmine-html.js"></script>
   <script type="text/javascript" src="support/require.js"></script>
